1999-04-20  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* libobj10.test: New file.
	* Makefile.am (TESTS): Added libobj10.test.

1999-04-11  Tom Tromey  <tromey@cygnus.com>

	* subobj2.test: New file.
	* Makefile.am (TESTS): Added subobj2.test.

	* subobj.test: New file.
	* Makefile.am (TESTS): Added subobj.test.

	* confh.test: Use `sed' to extract full definition of
	DIST_COMMON.  Look for stamp-h.in rule in include/Makefile.in.
	* Makefile.am (XFAIL_TESTS): Removed confh.test.

1999-04-10  Tom Tromey  <tromey@cygnus.com>

	* defs: Ensure srcdir is always absolute.

	* Makefile.am (XFAIL_TESTS): Removed cond8.test.

	* gcj2.test: New file.
	* Makefile.am (TESTS): Added gcj2.test.

1999-04-10  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* suffix.test: New file.
	* Makefile.am: Added suffix.test.

	* Makefile.am (XFAIL_TESTS): Added cond8.test.

	* cond3.test: Refer to am_targ_OBJECTS.

	* yacc2.test, yacc3.test: New files.
	* Makefile.am (TESTS): Added yacc2.test and yacc3.test.

1999-04-09  Tom Tromey  <tromey@cygnus.com>

	* nodist.test: New file.
	* Makefile.am (TESTS): Added nodist.test.

	* gcj.test: New file.
	* Makefile.am (TESTS): Added gcj.test.

1999-04-08  Tom Tromey  <tromey@cygnus.com>

	* cond8.test: New file.
	* Makefile.am (TESTS): Added cond8.test.

1999-04-07  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* backsl2.test: New file.
	* Makefile.am (TESTS): Added backsl2.test.

	* texinfo8.test: texinfo.tex is only disted by aux/Makefile.

	* texinfo8.test: New file.
	* Makefile.am (TESTS): Added texinfo8.test.

1999-03-31  Tom Tromey  <tromey@cygnus.com>

	* pluseq2.test, pluseq3.test: Updated for recent \-preservation
	change.

1999-03-31  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* Makefile.am (XFAIL_TESTS): add confh.test

1999-03-30  Tom Tromey  <tromey@cygnus.com>

	* mclean.test: Fixed typo.

	* mclean.test: New file.
	* Makefile.am (TESTS): Added mclean.test.

1999-03-30  Alexandre Oliva  <oliva@dcc.unicamp.br>
