@@ -1,0 +1,52 @@
+#! /bin/sh
+
+# Test to make sure that we do not use variable names starting in
+# non-letters, and AM_ prefixes are used instead
+
+. $srcdir/defs || exit 1
+
+echo AC_PROG_CC >> configure.in
+
+cat > Makefile.am << 'END'
+bin_PROGRAMS = 123test
+123test_SOURCES = 123.c
+END
+
+$AUTOMAKE && exit 1
+
+cat > Makefile.am << 'END'
+bin_PROGRAMS = 123test
+AM123test_SOURCES = 123.c
+END
+
+$AUTOMAKE || exit 1
+
+cat > Makefile.am << 'END'
+bin_PROGRAMS = _foo
+_foo_SOURCES = foo.c
+END
+
+$AUTOMAKE && exit 1
+
+cat > Makefile.am << 'END'
+bin_PROGRAMS = _foo
+AM_foo_SOURCES = foo.c
+END
+
+$AUTOMAKE || exit 1
+
+cat > Makefile.am << 'END'
+bin_PROGRAMS = ,foo
+,foo_SOURCES = foo.c
+END
+
+$AUTOMAKE && exit 1
+
+cat > Makefile.am << 'END'
+bin_PROGRAMS = ,foo
+AM_foo_SOURCES = foo.c
+END
+
+$AUTOMAKE || exit 1
+
+exit 0
