@@ -1,3 +1,8 @@
+1999-04-27  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* canon5.test (bin_PROGRAMS): New file.
+	* Makefile.am (TESTS): Added canon5.test.
+
 1999-04-20  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
 	* libobj10.test: New file.
